Implement example triage workflow for DataDog MCP server, consolidating tools from 17 to 7. Enhance `search_logs` with service-aware filtering and improve log formatting. Introduce service-specific filter configurations and validation. Update documentation to reflect new features and usage examples, ensuring clarity for end-users.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "DataDog MCP server for log search and monitoring integration"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
-    {name = "Torch Team"}
+    {name = "torch"}
 ]
 dependencies = [
     "fastmcp>=2.0.0",
